# simple-sftp

./: .coveragerc  .gitignore  .testmondata  LICENSE  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codecov.yml  codeql-analysis.yml  lint.yml  mypy.yml  python-publish.yml  run-tests.yml  tests.yml
examples/: quickstart.py
simple_sftp/: __init__.py  auth.py  base.py  const.py  core.py  exceptions.py  excs.py  util.py  utils.py
tests/: conftest.py  sshd.py  test_auth.py  test_dummy.py  test_util.py  utils.py
tests/sshd/: __init__.py  exceptions.py  server.py
