[tool.poetry]
name = "simple-sftp"
version = "0.0.1"
description = "Simple SFTP python client based on ssh2-python package"
authors = ["Ivan Fedorov <inbox@titaniumhocker.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ssh2-python = "^0.26.0"
tox = "^3.21.4"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pytest = "^6.2.2"
jedi = "^0.18.0"
flake8 = "^3.8.4"
isort = "^5.7.0"
pytest-cov = "^2.11.1"
pytest-sftpserver = "^1.3.0"
coverage = {extras = ["toml"], version = "^5.4"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.coverage.run]
source = [
    "simple_sftp"
]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38,py39
isolated_build = True

[tox:.package]
basepython = python3

[testenv]
commands = pytest
deps =
    pytest
"""
